added title & description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <button class="btn">Get Random Cat</button>
     </section>
     <div class="container"></div>
+    <header class="Title">Random Cats to make your day better!</header>
+    <p class="Description">
+      Studies have shown that cats have a calming, stress-reducing impact on our
+      health, and that cat owners are up to 30% less likely to experience heart
+      diseases.
+    </p>
     <script src="main.js"></script>
   </body>
 </html>
